--- a/index.html
+++ b/index.html
@@ -2700,6 +2700,17 @@
             });
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16745665072">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16745665072');
+</script>
 </body>
 </html>
+
 
